--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -278,19 +278,14 @@ elemental ratios in other marine mollusc shells.
 \subsubsection{Modern specimens}\label{modern-specimens}
 
 The analysed specimens, their origin and respective studies with
-research background information can be found in Table 1. Here we will
-briefly summarise their contextual information, which can be accessed in
-more detail at the respective studies
+research background information can be found in \hyperref[Table_1]{Table
+1}. Here we will briefly summarise their contextual information, which
+can be accessed in more detail at the respective studies
 \citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While those
 studies also included other specimens, their accessibility or state of
 preservation did not all lend them to be re-analysed.
 
-There are two main locations that we sourced specimens from: the island
-of West Ray in Orkney (UK) and the Beagle Channel in Tierra del Fuego
-(Argentina). A modern shell on West Ray was collected in Rack Wick Bay
-in August 2009, which experiences virtually no freshwater input. The
-temperature
-
+\phantomsection\label{Table_1}
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
@@ -298,8 +293,8 @@ temperature
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}@{}}
-\caption{Table 1 Overview of the modern and archaeological limpet
-specimens analysed in this study \{\#tab:specimens\}}\tabularnewline
+\caption{Overview of the modern and archaeological limpet specimens
+analysed in this study.}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Context
@@ -364,13 +359,28 @@ del Fuego (AR) & Heshkaia\_35-1 & \emph{none} \\
 & & \emph{N. magellanica} & & Heshkaia\_35-9 & \\
 \end{longtable}
 
-\begin{figure}[H]
+There are two main locations that we sourced specimens from: the Beagle
+Channel in Tierra del Fuego (Argentina) and the island of West Ray in
+Orkney (UK). Four specimens were collected from the Beagle Channel in
+Cambaceres Bay. The area receives around 570 mm precipitation but the
+channel waters are predominantly influenced by marine currents stayed
+around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
+August to 10ºC in February.
 
-{\centering \includegraphics{Manuscript_files/figure-pdf/SST Data-1.pdf}
+On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
+August 2009. Westray lies about 70 km north of the Scottish mainland and
+experiences virtually no freshwater input. The annual SST ranges from
+6.3ºC in March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-SSTs-1.pdf}
 
 }
 
-\caption{SST values averaged over the last 20 years. SST values were
+\caption{\label{fig-SSTs}SST values averaged from years. SST values were
 sourced from \citep{europeanunion-copernicusmarineservice2015}}
 
 \end{figure}%
