added modern isotope data

--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -363,14 +363,16 @@ There are two main locations that we sourced specimens from: the Beagle
 Channel in Tierra del Fuego (Argentina) and the island of West Ray in
 Orkney (UK). Four specimens were collected from the Beagle Channel in
 Cambaceres Bay. The area receives around 570 mm precipitation but the
-channel waters are predominantly influenced by marine currents stayed
-around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
-August to 10ºC in February.
+channel waters are predominantly influenced by marine currents and in
+the period of October 2015 to October 2016 stayed around 30.7 ± 0.7 psu
+\citep{Nicastro2020-ih}. SSTs range from 4.7ºC in August to 10ºC in
+February.
 
 On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
 August 2009. Westray lies about 70 km north of the Scottish mainland and
-experiences virtually no freshwater input. The annual SST ranges from
-6.3ºC in March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
+experiences virtually no freshwater input with salinity values of 34.0
+-- 34.5 psu \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in
+March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
 
 \begin{figure}
 
@@ -385,7 +387,33 @@ sourced from \citep{europeanunion-copernicusmarineservice2015}}
 
 \end{figure}%
 
+All shells show multi-year quasi-sinusoidal records of SST change
+(Figure~\ref{fig-Mod_iso}), with \emph{Nacella} sp. shells living 2--3
+years and \emph{Patella v}. over 5 years. The δ\textsuperscript{18}O
+values of the Orcadian shell have not been directly compared to the
+local SST, but accurately reflect the seasonal changes expected with one
+large anomaly in the second summer of recorded growth.
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Mod_iso-1.pdf}
+
+}
+
+\caption{\label{fig-Mod_iso}Isotope values of modern limpet shells from
+Cambaceres Bay (\emph{a-f}) and Westray (\emph{g}).}
+
+\end{figure}%
+
 \subsubsection{Archaeological specimens}\label{archaeological-specimens}
+
+In total, we studied 16 archaeological specimens. Of those, seven come
+from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
+previously been studied to characterise seasonal temperature change
+during the Medieval Climate Anomaly and the Little Ice Age
+\citep{Surge2012-ba}. and nine from the site Hesk
 
 \subsection{Oxygen isotopes}\label{oxygen-isotopes}
 
