--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -88,7 +88,10 @@ source("DTW_Script-update.R")
 # Files  
 
 
-D18O <- read_csv(here("data","D18O.csv"))
+D18O <- read_csv(here("data","D18O.csv")) %>% 
+  mutate(period=case_when(startsWith(sampleID,"Q") ~ "Archaeological",TRUE ~ "Modern"))
+
+  
 MgCa <- read_csv(here("data","MgCa.csv"))
 
 Ferguson_data <- read_csv(here("data","Ferguson-data.csv")) %>% 
@@ -183,12 +186,12 @@ CamBayMax <- SST_df %>% filter(dataset=="Cambaceres Bay - Tierra del Fuego") %>%
 
 There are two main locations that we sourced specimens from: the Beagle Channel in Tierra del Fuego (Argentina) and the island of West Ray in Orkney (UK). Four specimens were collected from the Beagle Channel in Cambaceres Bay. The area receives around 570 mm precipitation but the channel waters are predominantly influenced by marine currents and in the period of October 2015 to October 2016 stayed around 30.7 ± 0.7 psu [@Nicastro2020-ih]. SSTs range from `r CamBayMin`ºC in August to `r CamBayMax`ºC in February.
 
-On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in August 2009. Westray lies about 70 km north of the Scottish mainland and experiences virtually no freshwater input with salinity values of 34.0 – 34.5 psu. The annual SST ranges from `r WestrayMin`ºC in March to `r WestrayMax`ºC in August (@fig-SSTs).
+On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in August 2009. Westray lies about 70 km north of the Scottish mainland and experiences virtually no freshwater input with salinity values of 34.0 – 34.5 psu [@Inall2009-ho]. The annual SST ranges from `r WestrayMin`ºC in March to `r WestrayMax`ºC in August (@fig-SSTs).
 
 ```{r SST plot}
 #| fig-cap: SST values averaged from  years. SST values were sourced from [@europeanunion-copernicusmarineservice2015]
-#| fig-height: 10
-#| fig-width: 10
+#| fig-height: 5
+#| fig-width: 5
 #| label: fig-SSTs
 
 
@@ -213,7 +216,52 @@ scale_fill_manual(values = c( "#007f7f", "#EC7063"))+
 
 ```
 
+All shells show multi-year quasi-sinusoidal records of SST change (@fig-Mod_iso), with *Nacella* sp. shells living 2–3 years and *Patella v*. over 5 years. The δ^18^O values of the Orcadian shell have not been directly compared to the local SST, but accurately reflect the seasonal changes expected with one large anomaly in the second summer of recorded growth. <!--# ADD FIGURE TO THESE ISOTOPE VALUES -->
+
+```{r Modern Isotope data}
+#| fig-cap: Isotope values of modern limpet shells from Cambaceres Bay (*a-f*) and Westray (*g*).
+#| fig-height: 10
+#| fig-width: 10
+#| label: fig-Mod_iso
+# Filter data for Modern period
+modern_data <- D18O %>% filter(period == "Modern")
+
+# Get unique sample IDs
+sample_ids <- unique(modern_data$sampleID)
+
+# Initialise an empty list to store plots
+plots <- list()
+
+# Loop over each sampleID to create individual plots
+for (i in seq_along(sample_ids)) {
+  sample_id <- sample_ids[i]
+  plot <- modern_data %>%
+    filter(sampleID == sample_id) %>%
+    ggplot(aes(dist, d18O)) +
+    geom_path() +
+    geom_point() +
+    xlim(0,15)+
+    labs(
+      x = "Distance from margin in mm",
+      y = expression(delta^18*O~("\u2030")),
+      subtitle = sample_id,
+      col = "",
+      fill = ""
+    ) +
+    theme(plot.subtitle = element_text(hjust = 0.5))
+  
+  # Store plot in the list
+  plots[[i]] <- plot
+}
+
+# Combine plots using patchwork and add letters
+wrap_plots(plots,nrow=4) + plot_annotation(tag_levels = 'a')
+
+```
+
 ### Archaeological specimens
+
+In total, we studied 16 archaeological specimens. Of those, seven come from Quoygrew on Westray dating to 900 – 1200 CE. These shells have previously been studied to characterise seasonal temperature change during the Medieval Climate Anomaly and the Little Ice Age [@Surge2012-ba]. and nine from the site Hesk
 
 ## Oxygen isotopes
 
