--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -362,11 +362,11 @@ del Fuego (AR) & Heshkaia\_35-1 & \emph{none} \\
 There are two main locations that we sourced specimens from: the Beagle
 Channel in Tierra del Fuego (Argentina) and the island of West Ray in
 Orkney (UK). Four specimens were collected from the Beagle Channel in
-Cambaceres Bay. The area receives around 570 mm precipitation but the
-channel waters are predominantly influenced by marine currents and in
-the period of October 2015 to October 2016 stayed around 30.7 ± 0.7 psu
-\citep{Nicastro2020-ih}. SSTs range from 4.7ºC in August to 10ºC in
-February.
+Cambaceres Bay in October 2016. The area receives around 570 mm
+precipitation but the channel waters are predominantly influenced by
+marine currents and in the period of October 2015 to October 2016 stayed
+around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
+August to 10ºC in February.
 
 On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
 August 2009. Westray lies about 70 km north of the Scottish mainland and
@@ -387,12 +387,68 @@ sourced from \citep{europeanunion-copernicusmarineservice2015}}
 
 \end{figure}%
 
-All shells show multi-year quasi-sinusoidal records of SST change
+\subsubsection{Archaeological specimens}\label{archaeological-specimens}
+
+In total, we studied 16 archaeological specimens. Of those, seven come
+from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
+previously been studied to characterise seasonal temperature change
+during the Medieval Climate Anomaly and the Little Ice Age
+\citep{Surge2012-ba}. Together they show a range of lifespans, with some
+comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
+growth) making them particularly susceptible to time-averaging. That
+said, the majority are under 5 years old. These shells are an ideal
+comparative dataset from an archaeological assemblage to compare to the
+modern shell ORK\_LT5 \citep{Graniero2017-io}.
+
+Nine additional shells have been selected for LIBS analysis only, to
+provide a comparative dataset to the modern \emph{Nacella} sp. shells.
+These have not been analysed for δ\textsuperscript{18}O-values, but
+rather as a test to see whether patterns visible in the modern Mg/Ca
+ratio distributions are also preserved and apparent in the
+archaeological shells.
+
+\subsection{Methods}\label{methods}
+
+\subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
+
+High-quality oxygen isotope values (δ\textsuperscript{18}O) were
+acquired from previous publications on \emph{P. vulgata}
+\citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
+magellanica} \citep{Nicastro2020-ih}, where detailed descriptions of the
+stable isotope analysis methodology can be found. In short, all shells
+were sectioned along the main growth axis to expose the internal growth
+structure. From the exposed section carbonate powder samples were
+acquired using a micromilling approach with resolutions of 100--200 µm
+and targeting the calcitic M+2 layer of the shells. Analytical precision
+of the isotope values was consistently at 0.05--0.10‰ and values are
+reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
+Belemnite) standard.
+
+\subsubsection{Mg/Ca ratios}\label{mgca-ratios}
+
+Mg/Ca elemental imaging was carried out using Laser Induced Breakdown
+Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany)
+using previously published methods \citep{Hausmann2023-ih}. These
+involve the ablation of the shell section using an infrared (1064 nm)
+laser pulse (1--2 mJ, 100 Hz) onto a surface area of 20--30 µm to
+generate a plasma plume. This plume emits light, which is measured using
+a synchronised spectrometer. The resulting light spectrum quantifies the
+emission lines of magnesium () and calcium () to determine their
+intensity ratio. While these two peaks alone do not represent the molar
+concentrations of both elements (as opposed to calibration free LIBS;
+e.g. \citep{Martinez-Minchero2022-jz}), the intensity ratio is linearly
+correlated to the molar concentration \citep{Hausmann2017-oa}.
+
+\section{Results}\label{Results}
+
+\subsubsection{Modern Specimens}\label{modern-specimens-1}
+
+All modern shells show multi-year quasi-sinusoidal records of SST change
 (Figure~\ref{fig-Mod_iso}), with \emph{Nacella} sp. shells living 2--3
 years and \emph{Patella v}. over 5 years. The δ\textsuperscript{18}O
 values of the Orcadian shell have not been directly compared to the
-local SST, but accurately reflect the seasonal changes expected with one
-large anomaly in the second summer of recorded growth.
+local SST, but accurately reflect the seasonal changes expected barring
+one extreme, anomalous value in the second summer of recorded growth.
 
 \begin{figure}
 
@@ -407,19 +463,21 @@ Cambaceres Bay (\emph{a-f}) and Westray (\emph{g}).}
 
 \end{figure}%
 
-\subsubsection{Archaeological specimens}\label{archaeological-specimens}
+\subsubsection{Archaeological
+Specimens}\label{archaeological-specimens-1}
 
-In total, we studied 16 archaeological specimens. Of those, seven come
-from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
-previously been studied to characterise seasonal temperature change
-during the Medieval Climate Anomaly and the Little Ice Age
-\citep{Surge2012-ba}. and nine from the site Hesk
+\begin{figure}
 
-\subsection{Oxygen isotopes}\label{oxygen-isotopes}
+\centering{
 
-\subsection{Mg/Ca ratios}\label{mgca-ratios}
+\includegraphics{Manuscript_files/figure-pdf/fig-Arch_iso-1.pdf}
 
-\section{Results}\label{Results}
+}
+
+\caption{\label{fig-Arch_iso}Isotope values of Archaeological limpet
+shells from Quoygrew}
+
+\end{figure}%
 
 \subsection{Patella vulgata}\label{patella-vulgata}
 
