--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -184,7 +184,7 @@ CamBayMax <- SST_df %>% filter(dataset=="Cambaceres Bay - Tierra del Fuego") %>%
 
 ```
 
-There are two main locations that we sourced specimens from: the Beagle Channel in Tierra del Fuego (Argentina) and the island of West Ray in Orkney (UK). Four specimens were collected from the Beagle Channel in Cambaceres Bay. The area receives around 570 mm precipitation but the channel waters are predominantly influenced by marine currents and in the period of October 2015 to October 2016 stayed around 30.7 ± 0.7 psu [@Nicastro2020-ih]. SSTs range from `r CamBayMin`ºC in August to `r CamBayMax`ºC in February.
+There are two main locations that we sourced specimens from: the Beagle Channel in Tierra del Fuego (Argentina) and the island of West Ray in Orkney (UK). Four specimens were collected from the Beagle Channel in Cambaceres Bay in October 2016. The area receives around 570 mm precipitation but the channel waters are predominantly influenced by marine currents and in the period of October 2015 to October 2016 stayed around 30.7 ± 0.7 psu [@Nicastro2020-ih]. SSTs range from `r CamBayMin`ºC in August to `r CamBayMax`ºC in February.
 
 On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in August 2009. Westray lies about 70 km north of the Scottish mainland and experiences virtually no freshwater input with salinity values of 34.0 – 34.5 psu [@Inall2009-ho]. The annual SST ranges from `r WestrayMin`ºC in March to `r WestrayMax`ºC in August (@fig-SSTs).
 
@@ -216,9 +216,45 @@ scale_fill_manual(values = c( "#007f7f", "#EC7063"))+
 
 ```
 
-All shells show multi-year quasi-sinusoidal records of SST change (@fig-Mod_iso), with *Nacella* sp. shells living 2–3 years and *Patella v*. over 5 years. The δ^18^O values of the Orcadian shell have not been directly compared to the local SST, but accurately reflect the seasonal changes expected with one large anomaly in the second summer of recorded growth. <!--# ADD FIGURE TO THESE ISOTOPE VALUES -->
+### Archaeological specimens
 
-```{r Modern Isotope data}
+In total, we studied 16 archaeological specimens. Of those, seven come from Quoygrew on Westray dating to 900 – 1200 CE. These shells have previously been studied to characterise seasonal temperature change during the Medieval Climate Anomaly and the Little Ice Age [@Surge2012-ba]. Together they show a range of lifespans, with some comparatively long for their size (QG1-7246-1, 12 years within 16 mm of growth) making them particularly susceptible to time-averaging. That said, the majority are under 5 years old. These shells are an ideal comparative dataset from an archaeological assemblage to compare to the modern shell ORK_LT5 [@Graniero2017-io].
+
+Nine additional shells have been selected for LIBS analysis only, to provide a comparative dataset to the modern *Nacella* sp. shells. These have not been analysed for δ^18^O-values, but rather as a test to see whether patterns visible in the modern Mg/Ca ratio distributions are also preserved and apparent in the archaeological shells.
+
+## Methods {#methods}
+
+### Oxygen isotopes
+
+High-quality oxygen isotope values (δ^18^O) were acquired from previous publications on *P. vulgata* [@Surge2012-ba; @Graniero2017-io], *N. deaureata* and *N. magellanica* [@Nicastro2020-ih], where detailed descriptions of the stable isotope analysis methodology can be found. In short, all shells were sectioned along the main growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromilling approach with resolutions of 100–200 µm and targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope values was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.
+
+### Mg/Ca ratios
+
+Mg/Ca elemental imaging was carried out using Laser Induced Breakdown Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany) using previously published methods [@Hausmann2023-ih]. These involve the ablation of the shell section using an infrared (1064 nm) laser pulse (1–2 mJ, 100 Hz) onto a surface area of 20–30 µm to generate a plasma plume. This plume emits light, which is measured using a synchronised spectrometer. The resulting light spectrum quantifies the emission lines of magnesium () and calcium () to determine their intensity ratio. While these two peaks alone do not represent the molar concentrations of both elements (as opposed to calibration free LIBS; e.g. [@Martinez-Minchero2022-jz]), the intensity ratio is linearly correlated to the molar concentration [@Hausmann2017-oa].
+
+# Results {#Results}
+
+### Modern Specimens
+
+```{r Modern iso ranges}
+# Ranges <- D18O %>% 
+#   filter(!(sampleID == "ORK_LT5" & d18O < 0.2)) %>% #excluding outlier
+# group_by(sampleID,period) %>% 
+#   mutate(range=max(d18O)-min(d18O),
+#          range=round(range,2)) %>% 
+#   select(period, sampleID,range) %>% unique()
+# 
+# Modern_Ranges <- Ranges %>% 
+#   filter(period=="Modern") %>% 
+#   arrange(range)
+
+#Interestingly, the overall annual range in δ18O-values on Orkney (~r Modern_Ranges$range[3]‰, excluding the anomalous value of 3.38‰) is comparable to the range in the Nacella sp. shells (r min(Modern_Ranges$range)‰ to r max(Modern_Ranges$range)‰) despite the different SST ranges.
+
+```
+
+All modern shells show multi-year quasi-sinusoidal records of SST change (@fig-Mod_iso), with *Nacella* sp. shells living 2–3 years and *Patella v*. over 5 years. The δ^18^O values of the Orcadian shell have not been directly compared to the local SST, but accurately reflect the seasonal changes expected barring one extreme, anomalous value in the second summer of recorded growth.
+
+```{r Modern Isotope plot}
 #| fig-cap: Isotope values of modern limpet shells from Cambaceres Bay (*a-f*) and Westray (*g*).
 #| fig-height: 10
 #| fig-width: 10
@@ -259,15 +295,48 @@ wrap_plots(plots,nrow=4) + plot_annotation(tag_levels = 'a')
 
 ```
 
-### Archaeological specimens
+### Archaeological Specimens
 
-In total, we studied 16 archaeological specimens. Of those, seven come from Quoygrew on Westray dating to 900 – 1200 CE. These shells have previously been studied to characterise seasonal temperature change during the Medieval Climate Anomaly and the Little Ice Age [@Surge2012-ba]. and nine from the site Hesk
+```{r Archaeological Isotope plot}
+#| fig-cap: Isotope values of Archaeological limpet shells from Quoygrew
+#| fig-height: 10
+#| fig-width: 10
+#| label: fig-Arch_iso
+# Filter data for Modern period
+arch_data <- D18O %>% filter(period == "Archaeological")
 
-## Oxygen isotopes
+# Get unique sample IDs
+sample_ids <- unique(arch_data$sampleID)
 
-## Mg/Ca ratios
+# Initialise an empty list to store plots
+plots <- list()
 
-# Results {#Results}
+# Loop over each sampleID to create individual plots
+for (i in seq_along(sample_ids)) {
+  sample_id <- sample_ids[i]
+  plot <- arch_data %>%
+    filter(sampleID == sample_id) %>%
+    ggplot(aes(dist, d18O)) +
+    geom_path() +
+    geom_point() +
+    # xlim(0,20)+
+    labs(
+      x = "Distance from margin in mm",
+      y = expression(delta^18*O~("\u2030")),
+      subtitle = sample_id,
+      col = "",
+      fill = ""
+    ) +
+    theme(plot.subtitle = element_text(hjust = 0.5))
+  
+  # Store plot in the list
+  plots[[i]] <- plot
+}
+
+# Combine plots using patchwork and add letters
+wrap_plots(plots,nrow=4) + plot_annotation(tag_levels = 'a')
+
+```
 
 ## Patella vulgata
 
