--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -109,7 +109,7 @@ Ferguson_data <- read_csv(here("data","Ferguson-data.csv")) %>%
 
 ```
 
-Limpet shells are commonly found within archaeological sites and and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source. They have successfully been studied in the past in the context of coastal subsistence economies, site occupation on seasonal [@shackleton1973; @Parker2018-wf; @Bosch2018-ud] or long-term scale [@Ortiz2015-mr], as well as palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change largely relies on the measurement of δ^18^O-values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca), to have an alternative measure, that potentially provides a more accurate SST estimate than δ^18^O-values, which are also affected by changes in salinity. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
+Limpet shells are commonly found within archaeological sites and and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source. They have successfully been studied in the past in the context of coastal subsistence economies, site occupation on seasonal [@Shackleton1973-ij; @Parker2018-wf; @Bosch2018-ud] or long-term scale [@Ortiz2015-mr], as well as palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change largely relies on the measurement of δ^18^O-values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca), to have an alternative measure, that potentially provides a more accurate SST estimate than δ^18^O-values, which are also affected by changes in salinity. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
 
 Problematically, links between Mg/Ca ratios and SST changes in limpets have also been shown to be unreliable [@Graniero2015-zv] and even where they were successful, anomalous patterns in some specimens had to be filtered out, reducing the overall robustness of the results of those successful studies [@Ferguson2011-zl].
 
@@ -483,7 +483,7 @@ Ferg_all/Ferg_individual+plot_layout(heights = c(0.5,0.5))
 
 | Species       | Locality       | Specimen | Correlation R^2^        | Study                             |
 |---------------|---------------|---------------|---------------|---------------|
-| *P. depressa* | Northern Spain | LAN541   | 0.87                    | [@garcía-escárzaga2021]           |
+| *P. depressa* | Northern Spain | LAN541   | 0.87                    |                                   |
 |               |                | LAN545   | 0.86                    |                                   |
 |               |                | LAN554   | 0.78                    |                                   |
 |               |                | LAN559   | 0.82                    |                                   |
