--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -225,8 +225,8 @@ past shorelines due to their robust carbonate structure and the
 long-term use of limpets as a marine food source. They have successfully
 been studied in the past in the context of coastal subsistence
 economies, site occupation on seasonal
-\citep{shackleton1973, Parker2018-wf, Bosch2018-ud} or long-term scale
-\citep{Ortiz2015-mr}, as well as palaeotemperature
+\citep{Shackleton1973-ij, Parker2018-wf, Bosch2018-ud} or long-term
+scale \citep{Ortiz2015-mr}, as well as palaeotemperature
 \citep{Fenger2007-gf, Surge2012-ba, Wang2012-ee, Colonese2012-ct, Ferguson2011-zl}.
 Determining past sea surface temperature (SST) change largely relies on
 the measurement of δ\textsuperscript{18}O-values within the calcitic
@@ -383,7 +383,7 @@ March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
 }
 
 \caption{\label{fig-SSTs}SST values averaged from years. SST values were
-sourced from \citep{europeanunion-copernicusmarineservice2015}}
+sourced from \citet{Good2020-nl}}
 
 \end{figure}%
 
@@ -550,7 +550,7 @@ Study
 \bottomrule\noalign{}
 \endlastfoot
 \emph{P. depressa} & Northern Spain & LAN541 & 0.87 &
-\citep{garcía-escárzaga2021} \\
+\citep{Garcia-Escarzaga2021-ij} \\
 & & LAN545 & 0.86 & \\
 & & LAN554 & 0.78 & \\
 & & LAN559 & 0.82 & \\
