--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -240,11 +240,22 @@ either through laser-ablation-isotope-ratio-mass-spectrometry
 faster and cost-effective, increasing the number of specimens that can
 be studied overall \citep{Durham2017-fh, Hausmann2023-ih}.
 
-Problematically, links between Mg/Ca ratios and SST changes in limpets
-have also been shown to be unreliable \citep{Graniero2015-zv} and even
-where they were successful, anomalous patterns in some specimens had to
-be filtered out, reducing the overall robustness of the results of those
-successful studies \citep{Ferguson2011-zl}.
+Problematically, links between Mg/Ca ratios and SST changes in many
+marine mollusc shells, including limpets, have shown to be unreliable
+\citep{Surge2008-ri, Wanamaker2008-zl, Schone2010-yl, Freitas2012-tx, Graniero2015-zv, Poulain2015-dg, Vihtakari2017-wd}.
+This is particularly the case where there is little available additional
+information on metabolic processes, organic components of the shell
+matrix, intra-increment and intra-shell variability, and growth rates,
+which can independently and unpredictably affect Mg/Ca ratios and
+confound their interpretation as temperature proxy. Confoundingly,
+multiple different temperature equations have been found for the same
+species (see {[}\citet{Freitas2012-tx}; @Vihtakari2017-wd{]} and
+references therein). Coeval specimens sharing one locality can also show
+differences in their relation to SST \citep{Hausmann2019-fi}. Where the
+use of Mg/Ca as a palaeotemperature proxy was successful, anomalous
+patterns in some specimens had still to be filtered out by hand,
+reducing the overall robustness of the results of those successful
+studies \citep{Ferguson2011-zl}.
 
 While recent research particularly of \emph{Patella} sp. in the
 Mediterranean and Southwest Europe have provided promising results
